# django-seriously

./: MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
django_seriously/: settings.py
django_seriously/authtoken/: admin.py  apps.py  authentication.py  forms.py  models.py  utils.py
django_seriously/authtoken/migrations/: 0001_initial.py  0002_token_last_seen_at_alter_token_scopes.py
django_seriously/minimaluser/: admin.py  apps.py  models.py
django_seriously/pydantic/: __init__.py  drf_fields.py  forms.py  mixin.py  model_fields.py  schema.py
django_seriously/utils/: admin.py  fields.py  forms.py  models.py  pydantic.py  schema.py  settings.py
helper/: github-ci-vars.py  makemigrations.py  mock_settings.py
requirements/: base.txt  dev.txt  optionals.txt  testing.txt
tests/: conftest.py  test_authtoken.py  test_base_model.py  test_pydantic_drf_field.py  test_pydantic_field.py  test_pydantic_schema.py  test_validated_field.py
